# component-meta

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PARITY_ANALYSIS.md  README.md  TEST_SUITE_PLAN.md  VCR_TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
docs/: API_ENDPOINTS.md  cftl-656-release-migration-test.cleanup.sh  cftl-656-release-migration-test.md  cftl-656-support-remediation.md
docs/superpowers/plans/: 2026-06-18-fb-ads-v2-v1-compat-flag.md
docs/superpowers/specs/: 2026-06-10-fail-on-missing-permissions-design.md  2026-06-18-fb-ads-v2-v1-compat-flag-design.md
scripts/: build_n_test.sh  generate_tests.py  sanitize_queries.py  validate_test_outputs.sh
scripts/lib/: output_validator.py
src/: client.py  component.py  configuration.py  output_parser.py  page_loader.py  vcr_recorder.py
tests/: __init__.py  conftest.py  output_validator.py  test_access_token_filter.py  test_client_resilience.py  test_component.py  test_configuration.py  test_datadir.py  test_fail_on_missing_permissions.py  test_functional.py  test_output_parser_action_breakdowns.py  test_output_parser_declared_fields.py  test_output_parser_streaming.py  test_output_parser_v1_compat.py  test_page_loader_async_retry.py  test_page_loader_dsl.py  test_snapshot_validator.py
tests/data/ads_dsl_action_breakdowns/: config.json
tests/data/ads_long_date_range/: config.json
tests/data/ads_sync_insights/: config.json
tests/data/instagram_account_filter/: config.json
tests/data/instagram_insights_valid/: config.json
tests/data/pages_feed/: config.json
tests/fixtures/: __init__.py  config.secrets.json.ci  mock_responses.py  output_snapshots.json  queries_sanitized.csv  sample_configs.py  sanitize_queries.py
tests/fixtures/cassettes/: gen_facebook_ads_v2_v20_0.json  gen_facebook_ads_v2_v22_0.json  gen_facebook_ads_v2_v23_0.json  gen_facebook_pages_v2_v20_0.json  gen_facebook_pages_v2_v22_0.json  gen_facebook_pages_v2_v23_0.json  gen_instagram_v2_v20_0.json  gen_instagram_v2_v22_0.json  gen_instagram_v2_v23_0.json  gen_instagram_v2_v24_0.json
tests/functional/01_instagram_v2_v23/source/data/: config.json
tests/functional/02_instagram_v2_v22/source/data/: config.json
tests/functional/03_instagram_v2_v24/source/data/: config.json
tests/functional/04_facebook_pages_v2_v22/source/data/: config.json
tests/functional/05_facebook_pages_v2_v23/source/data/: config.json
tests/setup/: configs.json
(+23 files in other folders)
