[project]
name = "component-meta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "aiolimiter>=1.1.0",
    "flake8>=7.3.0",
    "freezegun>=1.5.2",
    "keboola-component",
    "keboola-csvwriter>=1.0.1",
    "keboola-http-client",
    "keboola-utils>=1.1.0",
    "keboola-vcr",
    "mock>=5.1.0",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
keboola-http-client = { git = "https://github.com/keboola/python-http-client.git", rev = "feature/async" }
keboola-component = { git = "https://github.com/keboola/python-component.git", rev = "feature/vcr-auto-recording" }
datadirtest = { git = "https://github.com/keboola/datadirtest.git", rev = "feature/vcr-testing" }
keboola-vcr = { git = "https://github.com/keboola/python-vcr-tests.git", rev = "feature/default-sanitizer-config" }

[dependency-groups]
dev = [
    "datadirtest",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
log_cli_level = "WARNING"
filterwarnings = [
    "ignore:Primary key is set but columns are not:DeprecationWarning",
    "ignore:Parsing dates involving a day of month:DeprecationWarning",
]

[tool.ruff]
line-length = 120

