[project]
name = "component-meta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "aiolimiter>=1.1.0",
    "freezegun>=1.5.2",
    "keboola-component>=1.9.0",
    "keboola-csvwriter>=1.0.1",
    "keboola-http-client",
    "keboola-utils>=1.1.0",
    "mock>=5.1.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "keboola-vcr>=0.2.0",
    "keboola.datadirtest>=2.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
log_cli_level = "WARNING"
filterwarnings = [
    "ignore:Primary key is set but columns are not:DeprecationWarning",
    "ignore:Parsing dates involving a day of month:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "UP"]
